--- a/public/css/style.css
+++ b/public/css/style.css
@@ -84,7 +84,8 @@ html {
  /* max-height: 250px; */
 }
 .pubModalImage{
-  max-width: 90%;
+  max-width: 60%;
+  max-height: 60%;
 }
 
 .pubRow{
@@ -92,7 +93,7 @@ html {
 }
 
 
-.modal { width: 70% !important ; max-height: 100% !important ; }
+.modal { width: 70% !important ; max-height: 70% !important ; }
 
 .clickableImage{
   transition: .8s;
@@ -106,4 +107,22 @@ html {
 
 .clickableImage:hover{
   transform: translate(0, -6px);
+}
+
+.whiteOutline {
+	text-shadow:
+		-1px -1px 0 #ffffff,
+		1px -1px 0 #ffffff,
+		-1px 1px 0 #ffffff,
+		1px 1px 0 #ffffff;
+}
+
+.linkEffect{
+  transition: 1s;
+}
+
+.linkEffect:hover{
+  transition: 1s;
+  color: black;
+
 }
